<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_iiwa_description</name>
  <version>0.1.0</version>
  <description>
    KUKA iiwa7 robot description: URDF/Xacro files and meshes.
    No launch files. No MoveIt config. Just the robot model.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>