<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_iiwa_moveit_config</name>
  <version>0.1.0</version>
  <description>
    MoveIt 2 configuration for the KUKA iiwa7.
    Contains SRDF, kinematics, joint limits, and planning pipeline config.
    Depends on kuka_iiwa_description for the robot model.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kuka_iiwa_description</exec_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_simple_controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>