<?xml version="1.0"?>
<?xml-model href="http://www.ros.org/schema/rose 1.6" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>handle_estimation</name>
  <version>1.0.0</version>
  <description>Handle pose estimation using YOLO segmentation + RealSense</description>
  <maintainer email="user@handle.com">Handle Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <member_of_group>ament_vision_package_group</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>